# nova

./: .gitignore  CMakeLists.txt  README.md  setup.sh
include/: audio.h  camera.h  nassert.h  shader.h  steam_mgr.h
license/: openal-and-pffft.txt
src/: audio.c  camera.c  main.cpp  shader.c
tools/: readme.txt  shadergen.py
